syntax = "proto3";

package proto;

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "grpc/models/structures.proto";

option go_package = "github.com/fiveret/crm-golang/grpc/item-grpc; proto";

service ItemService{
    rpc CreateItem (CreateItemRequest) returns (CreateItemResponse){
        option (google.api.http) = {
            post: "/items"
        };
    }
    rpc GetItem (GetItemRequest) returns (GetItemResponse){
        option (google.api.http) = {
            get: "/items/{id}"
        };
    }
    rpc GetItems (GetItemsRequest) returns (GetItemsResponse){
        option (google.api.http) = {
            get: "/items"
        };
    }
    rpc PutItem (PutItemRequest) returns (PutItemResponse){
        option (google.api.http) = {
            put: "/items/{id}"
            body: "item"
        };
    }
    rpc DeleteItem (DeleteItemRequest) returns (DeleteItemResponse){
        option (google.api.http) = {
            delete: "/items/{id}"
        };
    }
}

message CreateItemRequest{
    models.Item item = 1;
}

message CreateItemResponse{
    string message = 1;
    google.protobuf.Timestamp createdAt = 2;
}

message GetItemRequest{
    uint32 id = 1;
}

message GetItemResponse{
    models.Item item = 1;
}

message GetItemsRequest{
    google.protobuf.Empty empty = 1;
}

message GetItemsResponse{
    repeated models.Item items = 1;
}

message PutItemRequest{
    uint32 id = 1;
    models.Item item = 2;
}

message PutItemResponse{
    models.Item item = 1;
    google.protobuf.Timestamp createdAt = 2;
    google.protobuf.Timestamp updatedAt = 3;
}

message DeleteItemRequest{
    uint32 id = 1;
}

message DeleteItemResponse{
    string message = 1;
}